[package]
name = "foyer-intrusive-derive"
description = "memory cache for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
darling = "0.20"
foyer-intrusive-v2 = { workspace = true }


[features]

[lib]
proc-macro = true

[lints]
workspace = true
